# dledger

./: .gitignore  CMakeLists.txt  Makefile  README.md  backend-test  backend-test.cpp  backend.cpp  dledger-anchor.cert  dledger-peer  dledger-peer.cpp  dledger-peer.hpp  identity-manager.hpp  ledger-record.cpp  ledger-record.hpp  ledger.cpp  ledger.hpp  peer.cpp  peer.hpp  record.cpp  record.hpp
5P/: LOG  LOG.old
app/: dledger-peer.cpp  peer.hpp
dfi-app/: CMakeLists.txt  README.md  dfi-filter1.wasm  dfi-ledger.cpp  dfi-test.cpp  dynamic-function-runner.cpp  dynamic-function-runner.h  install_wasmtime_c_api.sh  test0.wat  test2.wasm  todo.md  wasi.c
dfi-app/c-filter1/: CMakeLists.txt  Makefile  README.md  dfi-filter1.wasm  main.c
dfi-app/c-test1/: CMakeLists.txt  README.md  main.c
dfi-app/test1/: Cargo.toml
dfi-app/test2/: Cargo.toml
dfi-app/test2/src/: main.rs
diagrams/: Jun9.graffle
doc/: requirement.md  spec.md  vn.md
include/dledger/: cert-manager.hpp  config.hpp  ledger.hpp  record.hpp  return-code.hpp
src/: backend.cpp  backend.hpp  cert-list.cpp  cert-list.h  config.cpp  default-cert-manager.cpp  default-cert-manager.h  ledger-impl.cpp  ledger-impl.hpp  ledger-record.cpp  ledger-record.hpp  ledger.cpp  ledger.hpp  record.cpp  record_name.cpp  record_name.hpp
test/: backend-test.cpp  ledger-impl-test-anchor.cpp  ledger-impl-test-graph.cpp  ledger-impl-test.cpp  ledger-impl-test2.cpp  record-test.cpp
test/test-scripts/: node1-exec.sh  node2-exec.sh
